--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,3 +49,9 @@ body {
     color: #333;
     font-size: 1.5em;
   }
+
+  .search-form {
+    text-align: center;
+    padding: 1em;
+    background-color: #f4f4f4;
+  }
