--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,5 +54,5 @@ header {
 .search-form {
   text-align: center;
   padding: 1em;
-  background-color: #c21616 !important;
+  background-color: #44aaee !important;
 }
